Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)

	* egcs-1.1.2 Released.

Sun Mar 14 03:23:47 1999  Jeffrey A Law  (law@cygnus.com)

	* README, gcc.1, gcc.texi, version.c: Update for egcs-1.1.2 release.

Thu Mar 11 14:00:58 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.h (HARD_REGNO_MODE_OK): Disallow QI/HImode in fp regs.
	(MODES_TIEABLE_P): Update.

Thu Mar 11 00:20:52 1999  Alexandre Oliva <oliva@dcc.unicamp.br>

	* gcc.texi: Update bug reporting instructions to match
	current ezmlm list reality.

Mon Mar  8 01:19:23 1999  Jeffrey A Law  (law@cygnus.com)

	* version.c: Bump for prerelease.

Mon Mar  8 01:16:30 1999  Manfred Hollstein  <manfred@s-direktnet.de>
			  Jeff Law <law@cygnus.com>

	* configure.in (cpp_install_dir): Initialize from $enable_cpp
	if that's looking like a pathname.
	* configure: Rebuilt.

	* Makefile.in (install-cpp, uninstall-cpp): cpp_install_dir is an
	absolute pathname, not a $prefix relative pathname.

Fri Mar  5 01:19:22 1999  Jeffrey A Law  (law@cygnus.com)

	Thu Dec 17 18:21:49 1998  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
	* fixincludes (c_asm.h): Wrap Digital UNIX V4.0B DEC C specific
	asm() etc. function declarations in __DECC.

Wed Mar  3 23:55:14 1999  Zack Weinberg  <zack@rabi.columbia.edu>

	* cpp.in: New.  Better cpp shell script.
	* cpp.sh: Delete.
	* Makefile.in (cpp.sh): Build from cpp.in

Tue Mar  2 01:27:52 1999  H.J. Lu  (hjl@gnu.org)

	* Makefile.in (cpp_install_dir, INSTALL_CPP, UNINSTALL_CPP): New
	variables.
	(install-cpp, uninstall-cpp): New targets.
	(install-normal): Depend on $(INSTALL_CPP).
	(uninstall): Depend on $(UNINSTALL_CPP).
	* configure.in (cpp_install_dir): New, substitute.
	(tmake_file): Added t-install-cpp for --enable-cpp.
	* configure: Rebuilt.
	* cpp.sh: New cpp script.
	* config/t-install-cpp: New target fragment.

Mon Mar  1 23:38:20 1999  Jeffrey A Law  (law@cygnus.com)

	Tue Feb  2 23:38:35 1999  David O'Brien <obrien@FreeBSD.org>