@@ -1,3 +1,8 @@
+Wed Mar 17 00:05:41 1999  David S. Miller  <davem@redhat.com>
+
+	* jump.c (jump_optimize): Verify that registers used by jumps are
+	not clobbered by instructions being moved.
+
 Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
 
 	* egcs-1.1.2 Released.
